# k8s-autoscale

./: .taskcluster.yml  Dockerfile  README.rst  config-example.yaml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
configs/: schema.yml  stage-beetmover.yml
configs/relengworker-nonprod/: config.yml
configs/relengworker-prod/: config.yml
docker.d/: build_image.sh  healthcheck  init.sh  push_image.sh
k8s_autoscale/: cli.py  main.py  sla.py
requirements/: base.in  base.txt  local.txt  test.in  test.txt
src/k8s_autoscale/: cli.py  logging.py  main.py  slo.py  validate.py
taskcluster/: config.yml
taskcluster/docker/k8s_autoscale/: Dockerfile
taskcluster/docker/skopeo/: Dockerfile  push_image.sh
taskcluster/docker/test/: Dockerfile
taskcluster/k8s_autoscale_taskgraph/transforms/: by_tasks_for.py
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/push-image/: kind.yml
taskcluster/kinds/test/: kind.yml
tests/: test_sla.py
